# simeis

./: Cargo.toml  Makefile  git-ruleset.json
.github/: CODEOWNERS  Dockerfile  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md
.github/workflows/: build-matrix.yml  ci.yml  ci_opti.yml  deps-update.yml  quality-ci.yml  release-artifacts.yml  release.yml  rust-ci.yml
debian/: changelog  control  rules  simeis.1  simeis.install  simeis.postinst  simeis.prerm  simeis.service
example/: watch_game.py
github/workflow/: rust-ci.yml
rulesets/: bugfix-naming.json  feature-naming.json  main-protection.json  release-protection.json
sdk/: __init__.py
simeis-data/src/: galaxy.rs  ship.rs
simeis-server/: Cargo.toml
simeis-server/src/api/: crew.rs
tests/: marketTest.py  propertybased.py  shipTest.py  stationTest.py
