[workspace]
resolver = "2"
members = ["simeis-data", "simeis-server"]
exclude = ["example/rust"]

[workspace.dependencies]
log = "0.4.33"
env_logger = "0.11.11"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = { version = "0.28.0", features = ["derive"] }
base64 = "0.22.1"
mea = "0.6.4"
